[gd_scene load_steps=2 format=3 uid="uid://ch3mb8qp4m9vx"]

[ext_resource type="Script" path="res://scripts/ui/town_investment_controller.gd" id="1_town"]

[node name="TownInvestmentUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_town")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="MainPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Town Investments"

[node name="GoldDisplay" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Gold: 0"

[node name="CloseButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="DescLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Invest in town buildings to unlock new features and benefits."
autowrap_mode = 3

[node name="Content" type="ScrollContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BuildingsVBox" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
